--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,21 +1,32 @@
-name: Generate Snake
+name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 */12 * * *"
+    # Runs at 12am UTC every day
+    - cron: "0 0 * * *"
+  
+  # Allows manual workflow run
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
-      - uses: Platane/snk@master
+      
+      # Generates the snake
+      - uses: Platane/snk@v2
         id: snake-gif
         with:
           github_user_name: wasep12
-          svg_out_path: dist/github-contribution-grid-snake.svg
-          
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake.gif
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+      
+      # Push the changes
       - uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
