--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,17 +17,18 @@ jobs:
       - uses: actions/checkout@v3
       
       # Generates the snake
-      - uses: Platane/snk@v2
-        id: snake-gif
+      - name: Generate Snake
+        uses: Platane/snk@v3
         with:
-          github_user_name: wasep12
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake.gif
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.gif
       
       # Push the changes
-      - uses: crazy-max/ghaction-github-pages@v3
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
